z-index correction, addition of exitRestore function

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -62,7 +62,7 @@
     display: none;
   }
   .mobile {
-    z-index: 9;
+    z-index: 20;
     position: fixed;
     top: 0;
     height: 100vh;
